--- a/src/app/shared/components/header-bar/header-bar.component.scss
+++ b/src/app/shared/components/header-bar/header-bar.component.scss
@@ -17,7 +17,7 @@ $searchBorderRadius: 15px;
   padding: 0 0.75em;
   background-color: $secondary;
   position: absolute;
-  z-index: 3;
+  z-index: 2;
   height: $headerHeight;
   width: 100%;
 
